# release-notes-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  config.example.json  pyproject.toml  requirements.txt  server.json  server.py
.github/workflows/: release.yml
